@@ -15,51 +15,39 @@ The Denner Mobile Web Service provides data and functions for the Denner Mobile 
 * `GET /online-filters/{id}/online-publications` (Werbemittel, [example](examples/online-publications.json))
 * `GET /online-filters/{id}/online-groups` (Internet-Sortimente, [example](examples/online-groups.json))
 
-### Wines
-
-* `GET /wines` (Weine, [example](examples/wines.json))
-* `GET /wine-filters` (Weinfilter, [example](examples/wine-filters.json))
-* `GET /food-matches` (Passt zu, [example](examples/food-matches.json))
-* `GET /wines/{id}/appraisals` (Weinbewertungen, [example](examples/wine-appraisals.json))
-* `POST /wines/{id}/appraisals` (Weinbewertungen, [example request](examples/wine-appraisals.post-request.json))
-
 ### Banners
 
 * `GET /banners` (Banner, [example](examples/banners.json))
 
-### Other
+## Documentation and Building 
 
-* `POST /sweepstake-participants` (Gewinnspielteilnehmer, [example request](examples/sweepstake-participants.post-request.json))
+To see the documentation page [Swagger UI](https://swagger.io/tools/swagger-ui/) visit  http://denner-mobile-api-docs.detailnet.ch/ or 
+for development start the Docker instance that presents the static HTML pages in `/docs`  (`lando start` and then view http://denner-mobile-api-spec.detailnet.me/)
 
-## Building
-
-### Protobox
+### Building
 To build the specification we're using [swagger-codegen](https://github.com/swagger-api/swagger-codegen).
 
-Run the following commands in [Protobox](https://bitbucket.org/detailnet/protobox) to install it (and it's dependencies):
+#### Using Ubuntu on WSL2 
+Run the following commands to install swagger-codgen and it's dependencies in a separate directory:
 
-        sudo apt-get install maven
-        sudo apt-get install openjdk-7-jdk
+        cd ..
         git clone git@github.com:swagger-api/swagger-codegen.git
+        sudo apt-get install maven
+        sudo apt install openjdk-11-jdk
         cd swagger-codegen
-        mvn package
+        git fetch origin 3.0.0:3.0.0
+        git checkout 3.0.0
+        #  export JDK_JAVA_OPTIONS=-Djdk.attach.allowAttachSelf=true .. not sure if really needed
+        mvn clean package
 
-#### JSON
-Once installed, `swagger.json` can be generated as follows:
+#### JSON (used to update docs page too)
+Once installed, `openapi.json` can be generated as follows:
 
         java -jar modules/swagger-codegen-cli/target/swagger-codegen-cli.jar generate \
             -i ../denner-mobile-api-spec/src/swagger.yml \
-            -l swagger \
-            -o ../denner-mobile-api-spec/build/swagger
+            -l openapi \
+            -o ../denner-mobile-api-spec/docs
         
-The file will be located at `build/swagger/swagger.json`.
+The file will be located at `docs/openapi.json`.
 
-#### HTML
-You can also generate a static HTML page:
-
-        java -jar modules/swagger-codegen-cli/target/swagger-codegen-cli.jar generate \
-            -i ../denner-mobile-api-spec/src/swagger.yml \
-            -l html \
-            -o ../denner-mobile-api-spec/build/html
-            
-The file will be located at `build/html/index.html`.
+You can then review the changes in the local browser (`lando start` and then view http://denner-mobile-api-spec.detailnet.me/) and commit them.
